src/test/deca/syntax/invalid/HelloWorld/Block-NoClosingBracket.deca
// Description:
//    tests de programme incorrect dont l'instruction n'est pas fermée par }
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 05/01/2022

{
println("Hello");
